--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<font size="+2"><b>Aditya Petety</b></font>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
