--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<font size="+2"><b>Aditya Petety</b></font>
-<p>I'm hosted with GitHub Pages.</p>
+<font size="+4"><b>Aditya Petety</b></font>
+<p>Room 213C, Science and Engineering 2</p> 
 </body>
 </html>
