--- a/index.html
+++ b/index.html
@@ -1,7 +1,66 @@
 <!DOCTYPE html>
 <html>
+  <head> <title> Aditya Petety </title> 
 <body>
-<font size="+4"><b>Aditya Petety</b></font>
-<p>Room 213C, Science and Engineering 2</p> 
+
+<h1> Aditya Petety </h1>
+
+Electrical Engineering and Computer Science <br/>
+
+University of California at Merced <br/>
+
+Science and Engineering 2 #213 C <br/>
+
+Merced, CA 95343 <br/>
+
+Email: apetety at ucmerced dot edu <br/>
+
+<h2> Bio </h2>
+
+I am a second-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://eecs.ucmerced.edu/"> Department of Electrical Engineering and Computer Science </a> at <a href="https://www.ucmerced.edu/"> UC Merced </a>. I am fortunate to be advised by Prof. <a href="https://faculty.ucmerced.edu/sim3/"> Sungjin Im </a>.
+
+
+<h2> Research Interests </h2>
+
+I am broadly interested in Theoretical Computer Science. In particular I am interested in Online algorithms, beyond worst case analysis like ML augmented algorithms and some aspects of theoretical ML.
+
+<h2> Publications </h2>
+
+<ol>
+
+<li>
+<a href="https://arxiv.org/abs/2202.04262"> Parsimonious Learning-Augmented Caching
+ </a> <br/>
+
+with Sungjin Im, Ravi Kumar and Manish Purohit <br/>
+
+ICML '22 <br/>
+
+</li>
+
+<br/>
+
+<li>
+<a href="https://link.springer.com/chapter/10.1007/978-3-030-67731-2_21"> Parameterized Complexity of d-hitting set with quotas </a> <br/>
+
+with Sushmita Gupta and Sagar Singh <br/>
+
+SOFSEM '21 <br/>
+
+</li>
+
+<br/>
+
+<li>
+<a href="https://arxiv.org/abs/1911.07875"> Attribute Noise Robust Binary Classification </a> <br/>
+
+with Sandhya Tripathi and N Hemachandra <br/>
+
+AAAI '20) <br/>
+
+</li>
+
+</ol>
+
 </body>
 </html>
