--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ I am a second-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://eecs
 
 <h2> Research Interests </h2>
 
-I am broadly interested in Theoretical Computer Science. In particular I am interested in Online algorithms, beyond worst case analysis like ML augmented algorithms and some aspects of theoretical ML.
+I am broadly interested in Theoretical Computer Science. In particular I am interested in online algorithms, beyond worst case algorithms like ML augmented algorithms and some aspects of theoretical ML.
 
 <h2> Publications </h2>
 
