--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ Email: apetety at ucmerced dot edu <br/>
 
 <h2> Bio </h2>
 
-I am a second-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://eecs.ucmerced.edu/"> Department of Electrical Engineering and Computer Science </a> at <a href="https://www.ucmerced.edu/"> UC Merced </a>. I am fortunate to be advised by Prof. <a href="https://faculty.ucmerced.edu/sim3/"> Sungjin Im </a>.
+I am a third-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://eecs.ucmerced.edu/"> Department of Electrical Engineering and Computer Science </a> at <a href="https://www.ucmerced.edu/"> UC Merced </a>. I am fortunate to be advised by Prof. <a href="https://faculty.ucmerced.edu/sim3/"> Sungjin Im </a>.
 
 
 <h2> Research Interests </h2>
 
-I am broadly interested in Theoretical Computer Science. In particular I am interested in online algorithms, beyond worst case algorithms like ML augmented algorithms and some aspects of theoretical ML.
+I currently work on online algorithms like scheduling, optimization, learning-augmented algorithms and theoretical machine learning. I am mainly interested in applying novel techniques to develop and analyze beyond worst case algorithms.
 
 <h2> Publications </h2>
 
