--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@ I currently work on online algorithms like scheduling, optimization, learning-au
 <ol>
 
 <li>
+<a href="https://arxiv.org/abs/2405.07949"> Online Load and Graph Balancing for Random Order Inputs (Outstanding Paper Award)
+ </a> <br/>
+
+with Sungjin Im, Ravi Kumar, Shi Li and Manish Purohit <br/>
+
+SPAA '24 <br/>
+
+</li>
+
+<br/>
+<li>
 <a href="https://arxiv.org/abs/2202.04262"> Parsimonious Learning-Augmented Caching
  </a> <br/>
 
@@ -61,6 +72,10 @@ AAAI '20 <br/>
 </li>
 
 </ol>
+
+<h2> Professional Service </h2>
+  Review: SPAA 2024, STOC 2024, ITCS 2024, SODA 2023, APPROX 2022
+
 
 </body>
 </html>
