--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@ I currently work on online algorithms like scheduling, optimization, learning-au
 <ol>
 
 <li>
+<a href=""> Online Scheduling via Gradient Descent for Weighted Flow Time Minimization </a> <br/>
+
+with Sungjin Im, and Aditya Petety <br/>
+
+The 36th ACM-SIAM Symposium on Discrete Algorithms (SODA '25) <br/>
+
+</li>
+
+<li>
 <a href="https://arxiv.org/abs/2405.07949"> Online Load and Graph Balancing for Random Order Inputs (Outstanding Paper Award)
  </a> <br/>
 
