--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 
 <h1> Aditya Petety </h1>
 
-Electrical Engineering and Computer Science <br/>
+Computer Science and Engineering <br/>
 
-University of California at Merced <br/>
+University of California Santa Cruz <br/>
 
-Science and Engineering 2 #213 C <br/>
+BE2 489 <br/>
 
-Merced, CA 95343 <br/>
+Santa Cruz, CA 95060 <br/>
 
-Email: apetety at ucmerced dot edu <br/>
+Email: apetety at ucsc dot edu <br/>
 
 <h2> Bio </h2>
 
-I am a third-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://eecs.ucmerced.edu/"> Department of Electrical Engineering and Computer Science </a> at <a href="https://www.ucmerced.edu/"> UC Merced </a>. I am fortunate to be advised by Prof. <a href="https://faculty.ucmerced.edu/sim3/"> Sungjin Im </a>.
+I am a foruth-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://engineering.ucsc.edu/departments/computer-science-and-engineering/"> Department of Computer Science and Engineering </a> at <a href="https://www.ucsc.edu/"> UC Santa Cruz </a>. I am fortunate to be advised by Prof. <a href="https://sites.google.com/view/sungjinim"> Sungjin Im </a>.
 
 
 <h2> Research Interests </h2>
