--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head> <title> Aditya Petety </title> 
 <body>
 
-<h1> Aditya Petety </h1>
+<table cellspacing="0" cellpadding="0">
+  <tbody>
+    <tr valign="center">
+      <td><img src="aditya.png" width=200 </td>
+      <td>
+         <h1>&nbsp Aditya Petety </h1>
+&nbsp&nbsp&nbsp    Computer Science and Engineering
+<br>&nbsp&nbsp&nbsp   University of California at Santa Cruz
+<br>&nbsp&nbsp&nbsp   Email: apetety at ucsc dot edu
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-Computer Science and Engineering <br/>
-
-University of California Santa Cruz <br/>
-
-BE2 489 <br/>
-
-Santa Cruz, CA 95060 <br/>
-
-Email: apetety at ucsc dot edu <br/>
 
 <h2> Bio </h2>
 
