--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ I am a foruth-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://engi
 
 <h2> Research Interests </h2>
 
-I currently work on online algorithms like scheduling, optimization, learning-augmented algorithms and theoretical machine learning. I am mainly interested in applying novel techniques to develop and analyze beyond worst case algorithms.
+I work on combining various ML models with theoretical algorithms to improve real world performance while maintaining worst-case guarantees. I also work on other ways to analyze beyond worst-case algorithms like resource augmentation, random order, etc.
 
 <h2> Publications </h2>
 
