--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <h2> Bio </h2>
 
-I am a foruth-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://engineering.ucsc.edu/departments/computer-science-and-engineering/"> Department of Computer Science and Engineering </a> at <a href="https://www.ucsc.edu/"> UC Santa Cruz </a>. I am fortunate to be advised by Prof. <a href="https://sites.google.com/view/sungjinim"> Sungjin Im </a>.
+I am a foruth-year Ph.D. student (Aug 2021 -- now)  in the <a href="https://engineering.ucsc.edu/departments/computer-science-and-engineering/"> Department of Computer Science and Engineering </a> at <a href="https://www.ucsc.edu/"> UC Santa Cruz </a>. I am advised by Prof. <a href="https://sites.google.com/view/sungjinim"> Sungjin Im </a>.
 
 
 <h2> Research Interests </h2>
@@ -34,7 +34,7 @@ I work on combining various ML models with theoretical algorithms to improve rea
 <li>
 <a href=""> Online Scheduling via Gradient Descent for Weighted Flow Time Minimization </a> <br/>
 
-with Sungjin Im, and Aditya Petety <br/>
+with Qingyun Chen and Sungjin Im <br/>
 
 The 36th ACM-SIAM Symposium on Discrete Algorithms (SODA '25) <br/>
 
